Fix top-nav bug on Safari

--- a/app/styles/components/navbar/navbar.scss
+++ b/app/styles/components/navbar/navbar.scss
@@ -9,7 +9,7 @@
   .nav-items {
     font-size: .97em;
     font-family: $libre;
-    width: 41.2em;
+    // width: 41.2em;
     height: 100%;
     margin: 0 auto;
     display: flex;
